[GR-42157] Backport fixes.